remove to springstart package

--- a/msf.properties
+++ b/msf.properties
@@ -1,3 +1,3 @@
-renderer.class=ru.javalang.StandartOutMessageRenderer
-provider.class=ru.javalang.MessageProvider
+renderer.class=ru.javalang.springstart.StandartOutMessageRenderer
+provider.class=ru.javalang.springstart.MessageProvider
 message="HOW DO YOU DO?"
